Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -1,36 +1,38 @@
-## 第2章 日本語デジタルテキストの基礎と書き方
-> この章で、日本語デジタルテキストの基礎、および組版のための日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に、対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。組版・テキストレイアウトの観点での書き方であることに注意。
+# 第2章 日本語デジタルテキストの基礎と書き方
+> この章で、日本語デジタルテキストの基礎、および組版・テキストレイアウトの観点での日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。
 
-### 2.1 デジタルデバイス上の日本語書き言葉の特徴
-> 2.1では日本語デジタルテキスト、すなわちデジタルにおける日本語書き言葉の特徴を解説する。必要十分な量で。深入りしすぎない。
-> 
-> デジタルデバイス上の書き言葉にフォーカスした日本語の特徴の one paragraph サマリ。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
-日本語は異なるスクリプト、仮名、漢字、ラテンアルファベット、アラビア数字、そして約物・記号を使って記述される（全てを含んだ例文）。語区切り文字がなく、そのため語の定義自体が必ずしも明白でない。縦書きと横書きがある（例）。漢字で書かれた単語に複数の読み方がある（例）ため、書き言葉と読みの二重構造があり、ルビや、フリガナ欄のある（それぞれ例）。これらのことから世界の中でも最も複雑な書記体系の一つである。
+## 2.1 デジタルデバイス上の日本語書き言葉の特徴
+> 直接役に立つ必要十分な量で。別の言葉で言うと、ノウハウ本程度の深さ。深入りしすぎない。
 
-現代の日本語は、表意文字である漢字と表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字は比較的複雑で黒みが強く、ひらがなは曲線が多く比較的単純である。この濃度や形の差がリズムを作り、非明示的に文章の構造を示している。ここに各々の役目をもつカタカナ、数字と英字、約物・記号が加わる。デジタルテキストにおいてはさらに絵文字や多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。次節でこれらについて概説する。
+> デジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
+現代の日本語は、表意文字である漢字と表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える（例）。漢字は四角く比較的複雑で、ひらがなは曲線が多く比較的単純である。語区切り文字がないが、この濃度や形の差がリズムを作り、非明示的に文章の構造を示している。ここに各々の役目をもつカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字や多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
 
-書くことの意味が、紙とデジタルで変わっていることの説明。
+漢字で書かれた単語には複数の読み方のある場合がある。コンテキストにより読み方が特定できる場合もあるが、名前など複数の可能性のうちどの読み方をすれば良いか判別が不可能な場合がある。これが日本語に書き言葉と読み言葉の二重構造を作っている。このため、読みを示すためのルビや、フォームにおけるフリガナ欄が存在する（それぞれ例）。
 
-### 2.2 日本語デジタルテキストに使用する文字
-#### ひらがなとカタカナ
-####  漢字
-#### 数字、英字
-#### 約物・記号
-#### デジタルデバイス上の日本語に独特な文字
-##### 全角数字や英字
-##### 半角カタカナ
-##### 絵文字
+歴史的に日本語は縦方向に書かれたが、西洋の文字や単語の影響で横書きもなされるようになった。デジタルデバイスにおいては横書きが主流（印刷では縦書きの比率が大きい）。
 
-### 2.3 必要とするシステムの能力
+>書くことの意味が、紙とデジタルで変わっていることの説明。
+
+## 2.2 日本語デジタルテキストに使用する文字
+### ひらがなとカタカナ
+###  漢字
+### 数字、英字
+### 約物・記号
+### デジタルデバイス上の日本語に独特な文字
+#### 全角数字や英字
+#### 半角カタカナ
+#### 絵文字
+
+## 2.3 必要とするシステムの能力
 > 言いたいこと：結合文字やサロゲートをサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
 
-### 2.4 文字の使い方の注意点
+## 2.4 文字の使い方の注意点
 > 書くことの意味が、紙とデジタルで変わっている。目の前の見かけではなく、正確に文字コードを選ぶ必要がある。適切な入力支援が必要。
 
-#### 英字（欧文、全角、和欧間空白）
-#### 数字（欧文、全角）
+### 英字（欧文、全角、和欧間空白）
+### 数字（欧文、全角）
 - ラテン文字の単語の前後にスペースを追加すべきかどうかなど（一般的に述べる）
-#### 約物
+### 約物
   - 括弧
 	- 例えば全角括弧とプロポーショナル括弧の使い方。どちらのコンテキストか。
 	- 囲む範囲の違い。英文の括弧は英字をディセンダを含めて囲むように、和文の括弧は全角和文を囲むように作られていて、ベースラインの調整とは関係なく、上下範囲が異なる
@@ -45,12 +47,12 @@
 	- 全角半角について一般的に述べることはある？ どちらも同じ意味の文字の場合は、UnicodeのNormalizationで同じ意味の文字は同じに扱う。フォームの問題
 	- Unicodeに不足している文字（全角ダブルクオートなど）
 
-### 2.5 生きたテキストにするために必要なこと
+## 2.5 生きたテキストにするために必要なこと
 > アクセシビリティ・検索への対応。コピー&ペーストの問題。 
 改行は段落を示す。一定文字ごとに強制的な改行を入れない。
 
-### 2.6 フォントの選択
-#### 書体の選び方
+## 2.6 フォントの選択
+### 書体の選び方
 ゴシック、丸ゴシック、明朝は様々なコンテントに汎用に使える。スタイルの合う英字書体がある。国際化にはこれらを使う。多くのフォントがあり、文字数の揃っているものも多い。
 
 ペンや鉛筆で書いたような書体や教科書体は、カジュアルなもしくは懐かしい雰囲気。筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。権威的な、または古風な雰囲気を持つ。日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であるから、基本的にはそれぞれのコンテキストを外れて使わない。同様に特定用途：アンチック、学参、字幕用。
@@ -65,7 +67,7 @@
 
 一般的に文字サイズの小さい本文にはゴシックや明朝など中庸で抽象度の高い書体を用いる。
 
-#### 英字書体との合わせ方
+### 英字書体との合わせ方
 書体、サイズとウェイトの合わせ方。
 
 デザイン：不安なく合わせられるのは、Serifと明朝、Sans-serifとゴシック、Roundと丸ゴシック。他の場合は書体の知識のある人の判断が必要。例えば、筆書系書体が伝統的だからといって、伝統的な英字書体と合うわけでも、また用途が似ているわけでもないのに注意（e.g. 英語筆記体で書いてあるバースデーカードを日本語化する際に行書が最適というわけではない）。またディスプレー書体を含んだテンプレートなどの国際化に注意。例えば、特定の国のスクール風はその他の国のスクール風ではない。
@@ -74,16 +76,16 @@
 
 ウェイト：
 
-#### 文字セット
+### 文字セット
 > 書体によってサポートする文字範囲が異なる。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。AdobeJapan1についても言及。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
 
-### 2.7 段落と組方向
+## 2.7 段落と組方向
 > コンテントとスタイルの分離の原則を説明
 
-#### 段落スタイル
+### 段落スタイル
 > 段下げと、段落の間に行送り方向に空間を開ける方法。
 
-#### 組み方向
+### 組み方向
 > 縦書きのあること。書き方のスタイルに若干の違いのあること。両方の方向に対応したテキストデータを作成するための問題点。横書きをベースに、縦書きがどう異なるかを説明。
 > 横書きを縦書きにする時の問題点、解決方法。反対方向はあまり問題ない
 > 
