Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -7,21 +7,58 @@
 > デジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
 現代の日本語は、表意文字である漢字と表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える（例）。漢字は四角く比較的複雑で、ひらがなは曲線が多く比較的単純である。語区切り文字がないが、この濃度や形の差がリズムを作り、非明示的に文章の構造を示している。ここに各々の役目をもつカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字や多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
 
-漢字で書かれた単語には複数の読み方のある場合がある。コンテキストにより読み方が特定できる場合もあるが、名前など複数の可能性のうちどの読み方をすれば良いか判別が不可能な場合がある。これが日本語に書き言葉と読み言葉の二重構造を作っている。このため、読みを示すためのルビや、フォームにおけるフリガナ欄が存在する（それぞれ例）。
+漢字で書かれた単語には複数の読み方のある場合がある。コンテキストにより読み方が特定できる場合もあるが、特に名前など書き手以外に判別が不可能な場合がある。これが日本語に書かれたものとその読みの二重構造を作っている。このため、読みを示すためのルビや、フォームにおけるフリガナ欄が存在する（それぞれ例）。
 
 歴史的に日本語は縦方向に書かれたが、西洋の文字や単語の影響で横書きもなされるようになった。デジタルデバイスにおいては横書きが主流（印刷では縦書きの比率が大きい）。
 
->書くことの意味が、紙とデジタルで変わっていることの説明。
+> 書くことの意味が、紙とデジタルで変わっていることの説明。
 
 ## 2.2 日本語デジタルテキストに使用する文字
 ### ひらがなとカタカナ
+ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本独自の表音文字である。ちょうどラテン文字の大文字小文字のように、ひらがなとカタカナは一対一に対応しており、各々約80文字ある（濁音半濁音小書を含め）。（ここで濁音半濁音小書き、50音表を説明。50音表ではなぜ濁音半濁音小書きが省略されている？）。両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための発音を示すルビ（後述）や付記のために漢字の形の一部を利用して生まれた。
+
+現代日本語においてひらがなは機能語として主に漢字で書かれる内容語を繋げ、または活用語の活用語尾となる。この役目のために、日本語はしばしば漢字とひらがなの繰り返しのリズムを作る。ひらがなは漢字に比べてcursiveかつ比較的単純であるため、形と濃度の差が語の区切りを見つけやすくしている。ひらがなはまた、内容語を示したり、読みの難しい漢字の読みを示すのに用いられる。
+
+カタカナは、外国語の単語をtranscribeし、音を直接表し、またオノマトペ(Onomatopoeia)に使われる。どれも音の表現である。
+
+読みにくくはあるが日本語を全てひらがな、もしくは全てカタカナ、で表すことができる。言語を学び始めたばかりの子どもの教科書はすべてひらがなである。子供達はまずひらがな、カタカナ、そして簡単な漢字の順に文字を学び始める。
+
+#### side note: 変体仮名
+変体仮名についても一言。以前は一つの発音に複数の仮名文字が対応していた。明治になって一つの発音に一つの文字に統一されたが（これ知らない人多い）、現代でも使用例がある。京都の街を歩くと店舗の名前などで出会うことができるだろう。
+
+#### side note: 非標準的な濁音半濁音つき仮名
+伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）合成半濁音（U+309A）を置く。しかし多くのフォントにはこれらに対応する専用グリフがなく、その表現はシステムやアプリケーションに依存する。
+
 ###  漢字
-### 数字、英字
+漢字は中国で生まれた表意文字。それぞれの文字が一つもしくは複数の概念を表し、非常のに多くの文字がある。漢字一つ一つが、英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると多くの数があることを理解しやすいだろう。複数文字で熟語を作る。日本語において漢字は内容語conent wordsを作る。
+
+一つの漢字に典型的に複数の読み方がある。さらに特に固有名詞の場合、その単語の読みが個々の漢字の本来の読みから乖離していることがある。漢字の読みは多くの場合は文脈から判断できるが（例：read の現在形と過去形）、特に固有名詞を中心に、真に曖昧で読みを特定することができない場合も多く存在する。すなわち日本語には表記と音声の二重の構造がある。日本語の住所録やその他のフォームにおける表記に並列な読み仮名フィールド（例）や、ルビ（後述）はこのために存在している。
+
+> 異体字について書く。特に伝統的な形と現在用いられている形。固有名詞。
+
+### 英字
+英字は、現代日本語の一部としての外国語由来の語を表すために、また記号的に使われる。また外国語をそのまま表したり、またはURLやメールアドレスなどの技術的内容の表現にも使われる。外国語、特に欧米の言葉はラテンアルファベットの綴りそのままを用いるか、カタカナでtranscribeする。
+
+### 数字
+ちょうどローマ数字やspell outされた数字のように、歴史的には漢字で数字を示していたが、現代ではアラビア数字の使用が増えている。熟語の中では漢字を使う（two sidesと言っても2 sidesとは言わないのと同じ）。
+
 ### 約物・記号
+英文で使われる約物が起源のものが多く、見かけが似ているものが多い。ただし、デザインが似ているものでも、それぞれの文字に合わせたデザインになっているので混用は望ましくない。約物の使い方は、別セクションに。
+
 ### デジタルデバイス上の日本語に独特な文字
 #### 全角数字や英字
+この二重符号化が歴史的な理由から存在する。活字では全角でない文字が含まれると行の調節が面倒だったので、全角の英数字が便利だった。またコンピューター上では全角英字は縦書きにした時に自動的に正立するので、英字が記号的に使われる時、日本語の単語の一部として使われる場合（e.g. Tシャツ）などに便利に使われる。web などスタイル付きテキストでは明示的に正立させることができるので本来の英字を使って必要な場合には正立させるのがより正しい方法である（理由！このように書いたら必ず理由を書く）。本来の英字と混ぜて使うとデザインが不統一になることがあるので、使用に注意が必要である（理由その1）。
+
+以降の章で英数字という言葉は、プロポーショナルなラテンスクリプトの文字を示し、ここで述べた全角英数字は、明示的に全角英数字と言う。
+日本語フォントに中途半端に含まれるギリシャ文字や数学記号などについて言及。
+
 #### 半角カタカナ
+初期のコンピューターではターミナル画面上の1:2の縦長の固定した箱にアルファベットを表示するようになっていた。そのようなデバイス上に日本語を表示するために作られた文字でカタカナのみが存在する。
+
+もはや必要なく、互換性のために存在する。他の文字とデザインが合わず、レイアウト的にも美しくないのでもはや日本語の中で使用するべきではない。これらの文字が入力できないデバイスも多い。
+
 #### 絵文字
+日本のi-modeと呼ばれるインターネットができる携帯電話上で発明されたピクトグラム。Unicode化され、世界中に広まった。メッセージソフトで見られるスタンプと異なり、文中、他の文字と同じポイント数で使われることを意図しており、文字と同じポイント数で判別することのできる単純化したシンボルであるべきである。
 
 ## 2.3 必要とするシステムの能力
 > 言いたいこと：結合文字やサロゲートをサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
@@ -41,7 +78,7 @@
 	- の後は一文字空ける。開けない場所も説明
 - カバーしたいこと
 	- JLReq をスキャンして、文字の使い方に関連することを拾い出す
-	- 見た目で紛らわしく、誤用しやすい文字を洗い出す（[Unicodeのconfusable](https://util.unicode.org/UnicodeJsps/confusables.jsp?a=&r=None)?）
+	- 見た目で紛らわしく、誤用しやすい文字を洗い出す（[Unicodeのconfusable](#)(https://util.unicode.org/UnicodeJsps/confusables.jsp?a=&r=None)?）
 	- 約物に関して入力プログラムに望まれる機能について触れる
 	- 同音異義語の選択誤りを避ける：e.g. 意外 vs 以外。また紛らわしい漢字について触れるか？祟る崇拝、柿柿
 	- 全角半角について一般的に述べることはある？ どちらも同じ意味の文字の場合は、UnicodeのNormalizationで同じ意味の文字は同じに扱う。フォームの問題
@@ -51,6 +88,8 @@
 > アクセシビリティ・検索への対応。コピー&ペーストの問題。 
 改行は段落を示す。一定文字ごとに強制的な改行を入れない。
 
+>HTMLなど、改行で区切られたテキストをひとまとまりの段落にまとめる機能がある場合についての注意。
+
 ## 2.6 フォントの選択
 ### 書体の選び方
 ゴシック、丸ゴシック、明朝は様々なコンテントに汎用に使える。スタイルの合う英字書体がある。国際化にはこれらを使う。多くのフォントがあり、文字数の揃っているものも多い。
@@ -59,7 +98,7 @@
 
 デザイン書体
 
- 日本語でない漢字フォントに注意。字形の違い。
+ 日本語でない漢字フォントに注意。字形の違い。日本語が他の言語の中に現れる場合にも注意。
 
 かな書体
 
