Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -5,6 +5,7 @@
 > 直接役に立つ必要十分な量で。別の言葉で言うと、ノウハウ本程度の深さ。深入りしすぎない。
 
 > デジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
+
 現代の日本語は、表意文字である漢字と表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える（例）。漢字は四角く比較的複雑で、ひらがなは曲線が多く比較的単純である。語区切り文字がないが、この濃度や形の差がリズムを作り、非明示的に文章の構造を示している。ここに各々の役目をもつカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字や多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
 
 漢字で書かれた単語には複数の読み方のある場合がある。コンテキストにより読み方が特定できる場合もあるが、特に名前など書き手以外に判別が不可能な場合がある。これが日本語に書かれたものとその読みの二重構造を作っている。このため、読みを示すためのルビや、フォームにおけるフリガナ欄が存在する（それぞれ例）。
@@ -116,7 +117,7 @@
 ウェイト：
 
 ### 文字セット
-> 書体によってサポートする文字範囲が異なる。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。AdobeJapan1についても言及。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
+書体によってサポートする文字範囲が異なること。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。AdobeJapan1についても言及。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
 
 ## 2.7 段落と組方向
 > コンテントとスタイルの分離の原則を説明
