Update 1. 初めに (Introduction).md

--- a/drafts/1. 初めに (Introduction).md
+++ b/drafts/1. 初めに (Introduction).md
@@ -5,20 +5,24 @@
  
 この文書は、デジタルデバイス上 のWebやメールなどに見られるような、表示環境に合わせた柔軟な表示が可能なテキストシステムにフォーカスし、日本語組版に必要なテキスト、フォント、および組版の要件を扱う。印刷を目的とする組版については「[日本語組版処理の要件](https://www.w3.org/TR/jlreq/)」を参照のこと。
 
-この文書では、デジタルデバイス上で環境に合わせた柔軟な表示が可能なテキストを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。本文書はデジタルテキストの日本語組版のために書かれた。
+この文書では、デジタルデバイス上で表示環境やユーザーの好みに合わせた柔軟な表示が可能なテキストを、データ、表示、その動的な振る舞い含め、デジタルテキストと呼ぶ。本文書はデジタルテキストの日本語組版のために書かれた。
 
 ## 1. この文書の目的
 > なぜこの文書が必要なのか。簡潔にしかし説得力のある文で。
 
-現在用いられている日本語の組版規則は、金属活字の技術の上で、読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よって組版規則は金属活字による作業の性質を色濃く反映している。組版規則はまた、より広く、紙という媒体を用いる印刷の仕組みの性質を反映している。
+現在用いられている日本語の組版規則は、金属活字の技術の上で、読みやすく美しい印刷物を経済効率よく製造するための規則として成立した。よってその規則は金属活字の技術や、紙という媒体の性質を色濃く反映している。
 
-これに対してデジタルテキストは印刷とは根本的に異なる技術基盤を持っている。重要な違いの一つは、個々のデジタルデバイスが自動組版装置でありかつ表示媒体であることだ。最終的な組版の決定は作り手によってではなく、受け手によって行われる。デジタルテキストは生きたデータであり、組版結果は表示環境に応じて、または編集中に多様に変化する。よって例えばあらかじめ行の折り返し位置を予測することができない。
+これに対してデジタルテキストは印刷とは根本的に異なる技術基盤を持っている。最も重要な違いは個々のデジタルデバイスが自動組版装置でありかつ表示媒体であることだ。組版はそれを読む人の手元で環境を反映して行われる。デジタルテキストは生きたデータであり、検索や編集などの動的な側面を持っている。
 
 また、技術そのものではないが、技術を取り巻く環境にも変化がある。例えばウェブを含むソフトウェアの開発が国際的な舞台で行われていること、書き手の組版に対する役割が飛躍的に増えたこと、アクセシビリティの確保が重要になったことなどである。
 
-このような技術基盤や周辺環境の違いから、JLReqを始めとする従来の組版規則の記述をそのままデジタルデバイスに適用しようとすると、さまざまな課題や、不足な点が明らかになる。
+技術基盤や周辺環境の違いから、印刷の組版規則をそのままデジタルデバイスに適用しようとすると、さまざまな課題や、不足な点が明らかになる。印刷の組版が目指してきたものはストレスなく読めかつ美しい組版であった。デジタルで目指すべきことも同様であって、印刷の模倣が目的ではない。
 
-本文書はこのような課題や不足点を解決するため、従来の規則およびその記述方法に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。また、デジタルテキストにおいて組版と密接な繋がりのある二つの話題、組版の観点からのテキストの作り方、および日本語フォントに必要な機能についての章を加えている。
+本文書はこのような問題意識のもと、従来の規則およびその記述方法に必要な更新を行い、また動的な側面などデジタルテキスト独自の機能のための拡張を加えている。
+
+（フォントについての章もある）
+
+デジタルテキストにおいては一人一人のテキストの作り手が組版に大きな役割を担っている。文字、特に約物の選択、文節スタイルの選択、文字のサイズやフォントの選択などが、多くの場合書き手に委ねられている。よって、この文書では書き手のための章を加えた。
 
 執筆にあたっては、できるだけ理由や背景を説明し、より良い解決方法を考える一助となるようにした。それによって、デジタルデバイス上でより高度な日本語組版の実装を助け、また日本語テキストの組版を将来に繋げてゆく一助となることを期待する。
 
@@ -39,16 +43,16 @@
 ### 組版が完全に自動的に決まる
 従来の組版規則は人間が組版を行うための原則として生まれた。時代を経て一部自動化され緻密化したが、人によるケースバイケースの判断を期待するという性質を受け継いでいる。
 
-対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人による判断が介在する余地がない。よって、例えば長いルビやURLなど行の折り返しを大きく乱すような例外的な入力に対しても、破綻せず合理的な組版を決定できる必要がある。
+対して、デジタルテキストの組版はソフトウェアにより完全に自動的に実行され、人による判断が介在する余地がない。よって、その規則は細部まで詰められたものである必要がある。例えば長いルビなど行の折り返しを大きく乱すような例外的な入力に対しても、破綻せず合理的な組版を決定できる必要がある。
 
 ### 活字組版の作業効率を考慮する必要がない
-印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角を基準とした長さの単位は組版の効率にとって重要であり、また行の調整は手間がかかるのでできるだけ避ける必要がある。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角を基準とした長さの利点はなく、行の調整の計算も効率よく行うことができる。
+印刷における日本語組版規則は、明治当時の最新技術であった金属活字の技術のもとで、組版作業者が美しく読みやすい組版を効率よく作成できるような指針として生まれた。例えば全角を基準とした長さの単位は組版の効率にとって重要であり、また行の調整は手間がかかるのでできるだけ避ける必要がある。しかし浮動小数点計算を基準とするデジタルデバイスにおいては全角を基準とした長さの効率に対する利点はなく、行の調整の計算も効率よく行うことができる。
 
 ### 実行速度が重要である
 デジタルデバイスは大量のデジタルテキストの組版を一瞬で完了させる必要がある。例えば、ウィンドウのサイズを変える、文字の大きさを変えるなど動的な挙動を、操作に追従して滑らかな動きとして見せるためには、アニメーションにおいて動きをスムースに見せるために必要な速度と同じ、毎秒数十コマの速度で組版を完了して画面を更新する必要がある。ゆえに組版の規則は高速な実行を可能にするものである必要がある。
 
 ### 紙面のコストがない
-歴史的に書写や印刷において、紙のコストが大きく、それが組版に大きな影響を与えてきた。限られたページ数の中に情報を詰め込むための工夫などはその影響の例である。デジタルテキストにはこのような工夫は必要がない。
+歴史的に書写や印刷において、紙のコストが大きく、それが組版に大きな影響を与えてきた。限られたページ数の中に情報を詰め込むための工夫などはその影響の例である。デジタルテキストではこのような工夫は必要がない。
 
 ### 画面の大きさによる制約を受ける
 対して、デジタルテキストは、種々の画面のサイズがあるため、画面の大きさに応じた工夫が必要となる。かつ、最終的にどのような画面で読まれるかわからないので、一つの設計を全ての場合に当てはめることができない。
@@ -56,14 +60,16 @@
 ### 環境に合わせた柔軟な組版が行われる
 デジタルテキストは受け手の環境に合わせて組版が行われるので、例えば行長はデバイスの画面サイズやウィンドウのサイズに従って決定され、あらかじめ予見することができない。その結果、どこで行が折り返されるのか事前に知ることはできない。
 
-### スクロールして読まれる
-長文を同じサイズの多数のシートに分割し、それを綴じた形式、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。冊子本は四角く、収納・管理や持ち運びが容易であり、またページ番号によりランダムアクセスが可能、という巻き物にはない機能があった。
+### ページで区切られず、スクロールして読まれる
+長文を同じ大きさの多数のシートに分割し、それを綴じた形式、冊子本の発明は歴史的に見て印刷の発明に勝るとも劣らない大きなインパクトがあったと言われている\*¹。冊子本は四角く、収納・管理や持ち運びが容易であり、またページ番号によりランダムアクセスが可能、という巻き物の本にはない機能があった。
 
-しかしデジタルテキストには保存や検索の機能が本来的に備わっており、これらの機能は冊子本の形式に関係なく達成される。よって、冊子本の形はデジタルデバイスにおいて、その本来の利点の多くを失う。
+しかしデジタルテキストには保存や検索の機能がページによらず本来的に備わっている。よって、冊子本の形はデジタルデバイスにおいて、その本来の利点の多くを失う。
 
-ウェブやメールに見られるように、デジタルデバイスにおいてはスクロールしながら読む巻物のような形態が主流であり、そこではページの存在を前提とするレイアウト方法を使うことができない。基本版面をテンプレートとして、同じサイズの複数のページに長文を分割してゆく方法はデジタルデバイスにおいては印刷の書籍を模するときに使われている。
+デジタルデバイスにおいては、ウェブやメールに見られるようにスクロールしながら読む巻物のような形態が主流であり、そこではページの存在を前提とするレイアウト方法を使うことはできない。
 
-\*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree, The Book in the Renaissance, Yale University Press, 2010 [https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/](https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/))
+（基本版面をテンプレートとして、同じサイズの複数のページに長文を分割してゆく方法はデジタルデバイスにおいては印刷が目的であったり、冊子本の形態を模倣する場合に使われている。）
+
+\*¹ アンドルー・ペティグリー『印刷という革命:ルネサンスの本と日常生活』桑木野幸司訳、白水社、2015年、 p18-21 (Andrew Pettegree, The Book in the Renaissance, Yale University Press, 2010 [https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/](#)(https://yalebooks.yale.edu/book/9780300178210/the-book-in-the-renaissance/))
 
 ### 動的な振る舞いがある
 デジタルテキストには、静的な画像である印刷にはない動的な振る舞いがある。選択、検索、データのコピー＆ペーストなどによる切り貼り、異なったスタイルの適用、異なった環境での表示などがその例である。
@@ -95,7 +101,7 @@
 
 > ここは未整理でまだ箇条書き。
 
-### 技術の取り扱い
+### 技術的前提
 - JLReq においては組版の現在の姿を表すために実装とは独立の記述方法をとっている。実装と独立の記述が可能なのは技術が成熟しきっている証左である。技術の進歩が大きい場合、技術につれて可能なことが変化するので、技術独立の記述が不可能になる。デジタルネイティブな組版においては技術との整合性が重要なポイントの一つであるため、実装を考慮した記述となる。エンジニアが読んで実装に移れるような記述にすることが重要である。
 - 広く受け入れられている規格や実装との整合性をつける。特に文字の定義は Unicode に基づいたものにする。例えば UAX #44 Unicode Character Database 特に General Category、UAX #11 East Asian Width、UAX #50 Unicode Vertical Text Layout など。
 - 必要な組版機能に対して規格・実装に不足があれば、その不足を洗い出して指摘する。この部分は規格や実装の進みに合わせて頻繁なアップデートが必要であろう。例えば日本語組版に対する文字コードの不備は明確に指摘する。同様に、重要であるのにcssやメジャーな実装で欠けていることがあれば、意識して書く。
@@ -114,7 +120,7 @@
 - 規範というよりガイドライン。「推奨」と「要件」は明確に分けて、わかるように書く
 - 理由を説明する。背景を示す：組版機能に対し、なぜそのような方法になっているのか、その理由を示すことでより良い理解を助ける。組版の方法や値が複数ある場合や、明確な答えがない場合には、その機能を考える際に重要な要素を示すことで独自の判断を助ける。結果のみではなく理由を示すことで、そこで示されている方法と異なった方法を試みることを可能にし、また議論と将来の進化を促すような内容にする。背景理解に役に立つ場合歴史的な経緯を示す。ただし歴史そのものが目的ではないので注意。
 
-### スコープ外
-- 印刷で出版されている書籍をその組版のルールを保ったまま電子化するような用途はスコープ外とする。同様にページの存在に頼る機能はスコープ外。
-- 国際化システムの中の日本語として記述。日本語独特ではない部分の組版には踏み込まない。例えば欧文、数式、添字、単位記号など。界面の振る舞いのみを定義する。
-- Unicodeでないシステム
+### スコープ
+文章を基本版面をテンプレートとしてページに分割してゆく方法は扱わない。この方法についてはJLReqを参照願いたい。
+
+国際化システムの中の日本語組版を記述しており、日本語独特ではない部分の組版には踏み込まない。例えば欧文、数式、添字、単位記号など。界面の振る舞いのみを定義する。
