Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -1,50 +1,59 @@
-# 第2章 日本語デジタルテキストの基礎と書き方
-> この章で、日本語デジタルテキストの基礎、および組版・テキストレイアウトの観点での日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。
+# 第2章 日本語デジタルテキストの書き方
+> この章で、日本語デジタルテキストの基礎、および組版・テキストレイアウトの観点での日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。
+
+前章で述べたように、デジタルテキストにおいては、書き手が組版の大きな部分を担っているので、書き手が意図通りのデジタルテキストを作る方法を知っていることが重要だ。このために書き手が気をつけるべきことをこの章にまとめた。またこの章は同時に以降の章のための基礎となる。
+
+現代においては非日本語話者が日本語を取り扱う必要のあることも増えている。ゆえ、必要な日本語の基礎もカバーすることとする。
 
 ## 2.1 デジタルデバイス上の日本語書き言葉の特徴
-> 直接役に立つ必要十分な量で。別の言葉で言うと、ノウハウ本程度の深さ。深入りしすぎない。
+> 以降の章のために役に立つ必要十分な量で。別の言葉で言うと、ノウハウ本程度の深さ。深入りしすぎない。
 
-> デジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
+> 2.1はデジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
 
-現代の日本語は、表意文字である漢字と表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える（例）。漢字は四角く比較的複雑で、ひらがなは曲線が多く比較的単純である。語区切り文字がないが、この濃度や形の差がリズムを作り、非明示的に文章の構造を示している。ここに各々の役目をもつカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字や多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
+現代の日本語は、表意文字である漢字と、表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字は比較的複雑で四角く見え、ひらがなは比較的単純で曲線が多い。漢字部分は内容語であり、ひらがな部分の多くは機能語として内容語を文法的につなげている。日本語には空白など語の区切りを示す文字はないが、漢字とひらがなの濃度、形や大きさの差がリズムを作り、非明示的にこの文の構造を示している（例）。
 
-漢字で書かれた単語には複数の読み方のある場合がある。コンテキストにより読み方が特定できる場合もあるが、特に名前など書き手以外に判別が不可能な場合がある。これが日本語に書かれたものとその読みの二重構造を作っている。このため、読みを示すためのルビや、フォームにおけるフリガナ欄が存在する（それぞれ例）。
+ここに各々独自の役目を持つカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字、多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
 
-歴史的に日本語は縦方向に書かれたが、西洋の文字や単語の影響で横書きもなされるようになった。デジタルデバイスにおいては横書きが主流（印刷では縦書きの比率が大きい）。
+日本語では、ほとんどの漢字が複数の読みを持っている。さらに、複合語や固有名詞では、その読みが個々の漢字の読みから乖離していることがある。多くの場合、漢字の読みは文脈から判断できるが、専門用語などで読み方が広く知られていなかったり、特に固有名詞では、真に曖昧で書かれたものだけでは読みを特定できないことがある。
 
-> 書くことの意味が、紙とデジタルで変わっていることの説明。
+このため、日本語では、漢字に対する読みを示して読むのを助けるためにルビを使用したり、名前や住所を記入するフォームでは漢字と読みの両方を入力するなどの方法が発展してきた。これらの方法が示すように、日本語は、書き言葉とその読みが二重構造を作っている。
+
+歴史的に日本語は縦方向に書かれたが、西洋の数字や単語の影響で横書きもなされるようになった。印刷においては縦書きの割合が大きいが、デジタルデバイスにおいては横書きが主流である。
+
+日本語に限らないが、デジタルテキストを書く際には、目の前の見かけではなく、どのような文字コードが選ばれたかが重要である。（を一パラグラフ内でもう少し展開して）
+
 
 ## 2.2 日本語デジタルテキストに使用する文字
 ### ひらがなとカタカナ
-ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本独自の表音文字である。ちょうどラテン文字の大文字小文字のように、ひらがなとカタカナは一対一に対応しており、各々約80文字ある（濁音半濁音小書を含め）。（ここで濁音半濁音小書き、50音表を説明。50音表ではなぜ濁音半濁音小書きが省略されている？）。両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための発音を示すルビ（後述）や付記のために漢字の形の一部を利用して生まれた。
+ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本語独自の表音文字である。ちょうどラテン文字の大文字小文字のように、ひらがなとカタカナは一対一に対応しており、各々約80文字ある（濁音半濁音小書を含め）。（ここで濁音半濁音小書き、50音表を説明。50音表ではなぜ濁音半濁音小書きが省略されている？）。両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための発音を示すルビ（後述）や付記のために漢字の形の一部を利用して生まれた。
 
 現代日本語においてひらがなは機能語として主に漢字で書かれる内容語を繋げ、または活用語の活用語尾となる。この役目のために、日本語はしばしば漢字とひらがなの繰り返しのリズムを作る。ひらがなは漢字に比べてcursiveかつ比較的単純であるため、形と濃度の差が語の区切りを見つけやすくしている。ひらがなはまた、内容語を示したり、読みの難しい漢字の読みを示すのに用いられる。
 
-カタカナは、外国語の単語をtranscribeし、音を直接表し、またオノマトペ(Onomatopoeia)に使われる。どれも音の表現である。
+カタカナは、外国語の単語をtranscribeし、音を直接表し、またオノマトペ（Onomatopoeia）に使われる。どれも音の表現である。
 
 読みにくくはあるが日本語を全てひらがな、もしくは全てカタカナ、で表すことができる。言語を学び始めたばかりの子どもの教科書はすべてひらがなである。子供達はまずひらがな、カタカナ、そして簡単な漢字の順に文字を学び始める。
 
 #### side note: 変体仮名
-変体仮名についても一言。以前は一つの発音に複数の仮名文字が対応していた。明治になって一つの発音に一つの文字に統一されたが（これ知らない人多い）、現代でも使用例がある。京都の街を歩くと店舗の名前などで出会うことができるだろう。
+変体仮名についても一言。仮名は漢字の続け字の形から生まれて音だけが残ったものなので、一つの発音に対応する仮名文字が複数あった。明治になって一つの発音に一つの文字に統一されたが（これ知らない人多い）、統一以前の仮名は現代でも使用例がある。京都の街を歩くと店舗の名前などで出会うことができるだろう。近年Unicodeにも加わったので、デジタルデバイス上で使用することができる。
 
 #### side note: 非標準的な濁音半濁音つき仮名
 伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）合成半濁音（U+309A）を置く。しかし多くのフォントにはこれらに対応する専用グリフがなく、その表現はシステムやアプリケーションに依存する。
 
 ###  漢字
-漢字は中国で生まれた表意文字。それぞれの文字が一つもしくは複数の概念を表し、非常のに多くの文字がある。漢字一つ一つが、英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると多くの数があることを理解しやすいだろう。複数文字で熟語を作る。日本語において漢字は内容語conent wordsを作る。
+漢字は中国で生まれた表意文字。それぞれの文字が一つもしくは複数の概念を表し、非常のに多くの文字がある。漢字一つ一つが、英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると多くの数があることを理解しやすいだろう。日本語において漢字は内容語conent wordsを作る。
 
-一つの漢字に典型的に複数の読み方がある。さらに特に固有名詞の場合、その単語の読みが個々の漢字の本来の読みから乖離していることがある。漢字の読みは多くの場合は文脈から判断できるが（例：read の現在形と過去形）、特に固有名詞を中心に、真に曖昧で読みを特定することができない場合も多く存在する。すなわち日本語には表記と音声の二重の構造がある。日本語の住所録やその他のフォームにおける表記に並列な読み仮名フィールド（例）や、ルビ（後述）はこのために存在している。
+漢字は同じ意味を持つが形の異なるバリエーションを持つ場合があり、これを異体字と呼ぶ。これは英単語、特に固有名詞に時代や地域によってスペリングバリエーションがあるのに似ている。デジタルデバイス上で使える異体字には、差が重要でUnicode上に別々のコードポイントを持つものと、差が比較的小さくUnicodeのIVSで区別されるものがある。
 
-> 異体字について書く。特に伝統的な形と現在用いられている形。固有名詞。
+また、既に述べたように多くの漢字や複合語には複数の読みがあり、これが日本語に表記と読みとの二重構造を作っている。
 
 ### 英字
-英字は、現代日本語の一部としての外国語由来の語を表すために、また記号的に使われる。また外国語をそのまま表したり、またはURLやメールアドレスなどの技術的内容の表現にも使われる。外国語、特に欧米の言葉はラテンアルファベットの綴りそのままを用いるか、カタカナでtranscribeする。
+英字は、もともとは西欧語由来の単語を表すために使われていたが、現代では固有名詞を中心に外国由来でなくても使用される場合があり、現代日本語の一部として定着している。英字は記号的な用途のほか、URLやメールアドレス、技術的内容の表現にも使われる。
 
-### 数字
-ちょうどローマ数字やspell outされた数字のように、歴史的には漢字で数字を示していたが、現代ではアラビア数字の使用が増えている。熟語の中では漢字を使う（two sidesと言っても2 sidesとは言わないのと同じ）。
+### アラビア数字
+歴史的には数字を漢字で示していたが、現代では数量を表す際にアラビア数字の使用が増えている。一方、熟語の中に数字が現れる場合は漢字を使う（間違えやすい例を一つ。また英語の例も一つ：two sides vs 2 sides、a thousand and one nights vs  1001 nights（千一夜物語）、The seven Seas など）
 
-### 約物・記号
-英文で使われる約物が起源のものが多く、見かけが似ているものが多い。ただし、デザインが似ているものでも、それぞれの文字に合わせたデザインになっているので混用は望ましくない。約物の使い方は、別セクションに。
+### 約物
+約物には英文が起源のものが多く、見かけが似ているものが多い。ただし、デザインが似ているものでも、和文文字に合わせたデザインになっているので混用は望ましくない。約物の使い方は、別セクションに。
 
 ### デジタルデバイス上の日本語に独特な文字
 #### 全角数字や英字
@@ -54,18 +63,18 @@
 日本語フォントに中途半端に含まれるギリシャ文字や数学記号などについて言及。
 
 #### 半角カタカナ
-初期のコンピューターではターミナル画面上の1:2の縦長の固定した箱にアルファベットを表示するようになっていた。そのようなデバイス上に日本語を表示するために作られた文字でカタカナのみが存在する。
+初期のコンピューターではターミナル画面上の1:2の縦長の固定した箱にアルファベットを表示するようになっていた。そのような初期のデバイス上に日本語を表示するために作られた文字でカタカナのみが存在する。
 
-もはや必要なく、互換性のために存在する。他の文字とデザインが合わず、レイアウト的にも美しくないのでもはや日本語の中で使用するべきではない。これらの文字が入力できないデバイスも多い。
+もはや必要なく、互換性のために存在する。他の和文文字とデザインが合わず、プロフェッショナルな結果にならない。古いユーザーインターフェースや文章で見かけることがある。また顔文字など特殊な表現で見られる。これらの文字が入力できないデバイスも多い。
 
 #### 絵文字
-日本のi-modeと呼ばれるインターネットができる携帯電話上で発明されたピクトグラム。Unicode化され、世界中に広まった。メッセージソフトで見られるスタンプと異なり、文中、他の文字と同じポイント数で使われることを意図しており、文字と同じポイント数で判別することのできる単純化したシンボルであるべきである。
+日本の携帯電話で発明されたピクトグラムであり、多くは色を使っている。Unicode化され、世界中に広まった。
 
-## 2.3 必要とするシステムの能力
-> 言いたいこと：結合文字やサロゲートをサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
 
-## 2.4 文字の使い方の注意点
-> 書くことの意味が、紙とデジタルで変わっている。目の前の見かけではなく、正確に文字コードを選ぶ必要がある。適切な入力支援が必要。
+## 2.3 英字・数字・約物の使い方（ドラフト未完成）
+
+> 書くことの意味が、紙とデジタルで変わっていること、は正確に文字を選ばなけければならないことを意味し、より広く、デジタルではユーザーが正しくテキストを作る必要のあることにつながる
+> 目の前の見かけではなく、正確に文字コードを選ぶ必要がある。適切な入力支援が必要。
 
 ### 英字（欧文、全角、和欧間空白）
 ### 数字（欧文、全角）
@@ -85,17 +94,40 @@
 	- 全角半角について一般的に述べることはある？ どちらも同じ意味の文字の場合は、UnicodeのNormalizationで同じ意味の文字は同じに扱う。フォームの問題
 	- Unicodeに不足している文字（全角ダブルクオートなど）
 
-## 2.5 生きたテキストにするために必要なこと
-> アクセシビリティ・検索への対応。コピー&ペーストの問題。 
-改行は段落を示す。一定文字ごとに強制的な改行を入れない。
+## 2.4 日本語書体とフォントの選び方
+ここで書体とは文字デザインのカテゴリを指し、フォントとは名前のついた具体的な実装を指す。
 
->HTMLなど、改行で区切られたテキストをひとまとまりの段落にまとめる機能がある場合についての注意。
+### 日本語フォントの成り立ち
+先に述べたように日本語は複数の起源を持った文字を使用するので、一つの日本語フォントにはそれら複数の種類の文字が入っている。
 
-## 2.6 フォントの選択
-### 書体の選び方
-ゴシック、丸ゴシック、明朝は様々なコンテントに汎用に使える。スタイルの合う英字書体がある。国際化にはこれらを使う。多くのフォントがあり、文字数の揃っているものも多い。
+多くのフォントでは、漢字と仮名（和字、と言う用語を導入するか？）は統一した大きさの四角形の中にデザインされている。この場合の大きさとは、文字の黒い部分の大きさではなく、文字を並べた時にできる空間も含めた大きさである。
 
-ペンや鉛筆で書いたような書体や教科書体は、カジュアルなもしくは懐かしい雰囲気。筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。権威的な、または古風な雰囲気を持つ。日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であるから、基本的にはそれぞれのコンテキストを外れて使わない。同様に特定用途：アンチック、学参、字幕用。
+この四辺形の、文字を並べる方向の幅、つまり横書きなら横幅、縦書きなら縦幅、を「全角」または「全角幅」と呼び、日本語をレイアウトする際の重要な単位となっている。
+
+> 正方形なら縦書き、横書き両方に使いやすいこと。縦長なら縦書き、横長なら横書きに一般的には適していること。
+
+（和字が統一した幅になっていない日本語フォントもあるので、この文書ではU+3000 Ideographic Space、全角空白の幅を全角と定義する。（これは専門的すぎ。3章以降に））
+
+> 漢字文字数について。
+
+現代日本語は仮名の占める割合が多いので、仮名のデザインを変えることで効果的にテキストの見かけを変えることができる。漢字部分は同じデザインで、仮名のデザインのみ異なるフォントがある。（side note にmac/windowsでの例）
+
+日本語フォントは英字も持っており、それらの英字は和字と使われることを念頭にデザインされている。
+
+### 日本語書体
+ゴシック、丸ゴシック、明朝の書体は様々なコンテントに汎用に使える。特別な効果を狙っているので無い限りこれらの書体を使用するべきであろう。フォントに多くの選択肢があり、文字数（後述）の揃っているものが多い。
+
+英字と組み合わせやすいのもこれらの書体である。ゴシックはSans-serif、丸ゴシックRound Sans-serif、明朝はSerif書体に対応する。
+
+別個の英字フォントと合わせる場合でも、これらの書体は合わせやすい。よって国際化にはこれらの日本語書体を使うべきであろう。
+
+ペンや鉛筆で書いたような書体は、カジュアルなもしくは懐かしい雰囲気を持ち、横書きへの適応性があり、比較的応用範囲が広い。
+
+筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。公的な、権威的な、または古風な雰囲気を持つ。
+
+日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であるから、基本的にはそれぞれのコンテキストを外れて使わない。
+
+特殊な用途の書体に、アンチック、学参、字幕用がある。
 
 デザイン書体
 
@@ -110,14 +142,21 @@
 ### 英字書体との合わせ方
 書体、サイズとウェイトの合わせ方。
 
+日本語コンテキストであって特に意図のない場合は、日本語フォントに含まれる英字を使うのが賢明である。そのフォントの和字と使われることを念頭にデザインされているからである。これらの英字は和文との相性が良いように、特に下へのはみ出し（ディセンダ）が小さくデザインされている。
+
+英字が重要な用途において、または国際化環境などでは、英字に対して和字を合わせる必要のある場合がある。この場合の注意点を
+
+
 デザイン：不安なく合わせられるのは、Serifと明朝、Sans-serifとゴシック、Roundと丸ゴシック。他の場合は書体の知識のある人の判断が必要。例えば、筆書系書体が伝統的だからといって、伝統的な英字書体と合うわけでも、また用途が似ているわけでもないのに注意（e.g. 英語筆記体で書いてあるバースデーカードを日本語化する際に行書が最適というわけではない）。またディスプレー書体を含んだテンプレートなどの国際化に注意。例えば、特定の国のスクール風はその他の国のスクール風ではない。
 
 サイズ：従属欧文はディセンダが小さく日本語書体に合わせやすくなっている。任意の欧文と合わせるときのサイズの合わせ方。フォントサイズでは必ずしも合わせられない（サイドノートでcssのプロパティの紹介）。
 
 ウェイト：
 
-### 文字セット
-書体によってサポートする文字範囲が異なること。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。AdobeJapan1についても言及。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
+### フォントの文字セット
+> 書体によってサポートする文字範囲が異なる。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
+> 文字を十分含んだフォントを選ぶこと。
+> フォールバックに注意！
 
 ## 2.7 段落と組方向
 > コンテントとスタイルの分離の原則を説明
@@ -137,4 +176,12 @@
 1. 両方に適した書き方にする
 2. 両方に最適化
 3. 片方用に書いたものを両方にそのまま適用
+
+## 2.6 データの整合性
+> アクセシビリティ・検索への対応。コピー&ペーストの問題。 
+改行は段落を示す。一定文字ごとに強制的な改行を入れない。
+> HTMLなど、改行で区切られたテキストをひとまとまりの段落にまとめる機能がある場合についての注意。
+
+## 2.7 必要とするシステムの能力
+> 言いたいこと：結合文字やサロゲートをサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
 
