Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
integrated changes based on meeting on 2024-5-28

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -5,23 +5,30 @@
 
 現代においては非日本語話者が日本語を取り扱う必要のあることも増えている。ゆえ、必要な日本語の基礎もカバーすることとする。
 
-## 2.1 デジタルデバイス上の日本語書き言葉の特徴
+> デバイスやスタイルが変わった時を意識して、困らない書き方をしてくださいね。余計なことしないでね。という内容を書けば良い。dos and don’ts を具体的に。
+
+> ワープロ的な、フォントの選択、段落スタイルや縦書き横書きの話を章を分ける。
+
+> snsや書き込みなど vs 小説など。
+
+## 2.1 デジタルデバイス上の日本語書き言葉の基礎
 > 以降の章のために役に立つ必要十分な量で。別の言葉で言うと、ノウハウ本程度の深さ。深入りしすぎない。
 
 > 2.1はデジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
+ 
+> 日本語にネイティブでない人が対象だが、日本人でも発見があるかもしれない。以降の章に役に立つことを主眼に。
 
-現代の日本語は、表意文字である漢字と、表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字は比較的複雑で四角く見え、ひらがなは比較的単純で曲線が多い。漢字部分は内容語であり、ひらがな部分の多くは機能語として内容語を文法的につなげている。日本語には空白など語の区切りを示す文字はないが、漢字とひらがなの濃度、形や大きさの差がリズムを作り、非明示的にこの文の構造を示している（例）。
+現代の日本語は、表意文字である漢字と、表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字は比較的複雑で四角く見え、ひらがなは比較的単純で曲線が多い。漢字部分は内容語であり、ひらがな部分の多くは機能語として内容語を文法的につなげている。日本語には空白など語の区切りを示す文字はないが、漢字とひらがなの濃度、形や大きさの差がリズムを作り、これにより非明示的に語句のまとまり（the grouping of phrases）を示している（例）。
 
 ここに各々独自の役目を持つカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字、多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
 
 日本語では、ほとんどの漢字が複数の読みを持っている。さらに、複合語や固有名詞では、その読みが個々の漢字の読みから乖離していることがある。多くの場合、漢字の読みは文脈から判断できるが、専門用語などで読み方が広く知られていなかったり、特に固有名詞では、真に曖昧で書かれたものだけでは読みを特定できないことがある。
 
-このため、日本語では、漢字に対する読みを示して読むのを助けるためにルビを使用したり、名前や住所を記入するフォームでは漢字と読みの両方を入力するなどの方法が発展してきた。これらの方法が示すように、日本語は、書き言葉とその読みが二重構造を作っている。
+このため、日本語では、漢字に対する読みを示して読むのを助けるためにルビを使用したり、名前や住所を記入するフォームでは漢字と読みの両方を入力するなどの方法が発展してきた。これらの方法が示すように、日本語は、書き言葉とその読みが二重構造を部分的に作っている。
 
-歴史的に日本語は縦方向に書かれたが、西洋の数字や単語の影響で横書きもなされるようになった。印刷においては縦書きの割合が大きいが、デジタルデバイスにおいては横書きが主流である。
+歴史的に日本語は文字を縦方向に並べて書いたが、西洋の数字や単語の影響で横書きもなされるようになった。デジタルデバイスにおいては横書きが主流である。
 
 日本語に限らないが、デジタルテキストを書く際には、目の前の見かけではなく、どのような文字コードが選ばれたかが重要である。（を一パラグラフ内でもう少し展開して）
-
 
 ## 2.2 日本語デジタルテキストに使用する文字
 ### ひらがなとカタカナ
@@ -42,8 +49,6 @@
 ###  漢字
 漢字は中国で生まれた表意文字。それぞれの文字が一つもしくは複数の概念を表し、非常のに多くの文字がある。漢字一つ一つが、英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると多くの数があることを理解しやすいだろう。日本語において漢字は内容語conent wordsを作る。
 
-漢字は同じ意味を持つが形の異なるバリエーションを持つ場合があり、これを異体字と呼ぶ。これは英単語、特に固有名詞に時代や地域によってスペリングバリエーションがあるのに似ている。デジタルデバイス上で使える異体字には、差が重要でUnicode上に別々のコードポイントを持つものと、差が比較的小さくUnicodeのIVSで区別されるものがある。
-
 また、既に述べたように多くの漢字や複合語には複数の読みがあり、これが日本語に表記と読みとの二重構造を作っている。
 
 ### 英字
@@ -57,6 +62,7 @@
 
 ### デジタルデバイス上の日本語に独特な文字
 #### 全角数字や英字
+
 この二重符号化が歴史的な理由から存在する。活字では全角でない文字が含まれると行の調節が面倒だったので、全角の英数字が便利だった。またコンピューター上では全角英字は縦書きにした時に自動的に正立するので、英字が記号的に使われる時、日本語の単語の一部として使われる場合（e.g. Tシャツ）などに便利に使われる。web などスタイル付きテキストでは明示的に正立させることができるので本来の英字を使って必要な場合には正立させるのがより正しい方法である（理由！このように書いたら必ず理由を書く）。本来の英字と混ぜて使うとデザインが不統一になることがあるので、使用に注意が必要である（理由その1）。
 
 以降の章で英数字という言葉は、プロポーショナルなラテンスクリプトの文字を示し、ここで述べた全角英数字は、明示的に全角英数字と言う。
@@ -70,8 +76,9 @@
 #### 絵文字
 日本の携帯電話で発明されたピクトグラムであり、多くは色を使っている。Unicode化され、世界中に広まった。
 
-
 ## 2.3 英字・数字・約物の使い方（ドラフト未完成）
+
+日本語に限らないが、デジタルテキストを書く際には、目の前の見かけではなく、どのような文字コードが選ばれたかが重要である。（移動。書き方のどこかに。一パラグラフ内でもう少し展開して）
 
 > 書くことの意味が、紙とデジタルで変わっていること、は正確に文字を選ばなけければならないことを意味し、より広く、デジタルではユーザーが正しくテキストを作る必要のあることにつながる
 > 目の前の見かけではなく、正確に文字コードを選ぶ必要がある。適切な入力支援が必要。
@@ -94,6 +101,20 @@
 	- 全角半角について一般的に述べることはある？ どちらも同じ意味の文字の場合は、UnicodeのNormalizationで同じ意味の文字は同じに扱う。フォームの問題
 	- Unicodeに不足している文字（全角ダブルクオートなど）
 
+### 2章に含めたいが位置の決まっていないもの
+
+#### テキストの構造、書き方、例えば
+> 段落は明示的な改行の入らない一続きのテキスト。先頭に空白を入れるべきではない。が、実際には、全角の単位でインデントできるアプリケーションは2024年現時点では少ない。その場合全角空白を挿入する。
+> HTMLなど、改行で区切られたテキストをひとまとまりの段落にまとめる機能がある場合、その機能は和字の周辺に空白を入れるべきでない。が、そのようにしていないアプリケーションが多いので注意。その場合は空白が入るべき箇所で切るか、複数行に分けない。
+> 見出しについて何か言う事はあるか？　もし対象がHTMLやmarkdownならスタイルではなく、マークアップで示せよ、とは言えるが……
+
+#### 必要とするシステムの能力
+> 言いたいこと：結合文字（テスト：使いやすいテストケースはある？）やサロゲート（テスト：絵文字、もしくはサロゲートの必要な特定の漢字を示して、それが正常に表示でき、編集できる）をサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
+
+----
+# 第3章 文章のフォーマッティング
+> あとで別ファイルに移動する
+
 ## 2.4 日本語書体とフォントの選び方
 ここで書体とは文字デザインのカテゴリを指し、フォントとは名前のついた具体的な実装を指す。
 
@@ -114,7 +135,17 @@
 
 日本語フォントは英字も持っており、それらの英字は和字と使われることを念頭にデザインされている。
 
-### 日本語書体
+### 文字セット
+> 書体によってサポートする文字範囲が異なる。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
+> 文字を十分含んだフォントを選ぶこと。
+> フォールバックに注意！
+
+> AdobeJapan1 に触れるか触れないか。
+
+> 豊島先生、「JIS批判の基礎知識」https://joao-roiz.jp/mtoyo/on-JCS/mt-gene.pdf を読む。それから考える。
+
+
+### 日本語書体の種類と説明（明朝、ゴシックにフォーカス。他は一言紹介程度）
 ゴシック、丸ゴシック、明朝の書体は様々なコンテントに汎用に使える。特別な効果を狙っているので無い限りこれらの書体を使用するべきであろう。フォントに多くの選択肢があり、文字数（後述）の揃っているものが多い。
 
 英字と組み合わせやすいのもこれらの書体である。ゴシックはSans-serif、丸ゴシックRound Sans-serif、明朝はSerif書体に対応する。
@@ -153,22 +184,16 @@
 
 ウェイト：
 
-### フォントの文字セット
-> 書体によってサポートする文字範囲が異なる。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
-> 文字を十分含んだフォントを選ぶこと。
-> フォールバックに注意！
 
-## 2.7 段落と組方向
-> コンテントとスタイルの分離の原則を説明
 
-### 段落スタイル
-> 段下げと、段落の間に行送り方向に空間を開ける方法。
+## 3.2 段落
+> 主な段落スタイルの説明。データは中立であるべき等原則を説明。しかし現時点では現実にはそうはゆかないので、どうするかを説明（このような箇所は状況によってアップデートが必要）。
 
-### 組み方向
-> 縦書きのあること。書き方のスタイルに若干の違いのあること。両方の方向に対応したテキストデータを作成するための問題点。横書きをベースに、縦書きがどう異なるかを説明。
-> 横書きを縦書きにする時の問題点、解決方法。反対方向はあまり問題ない
-> 
-長いURLは書くより可能ならリンクに。
+## 3.3 組み方向
+> 組み方向の説明。書き方の違い。それが重要な場合とそうでない場合。データはスタイル中立であるべきという原則。主流でより制約の少ない横書きをベースとして、縦書きにする場合の説明。
+> 無視して良い場合、と述べたが、考えてみると、わざわざ、縦書きにするような用途は、大体気にする？　気にしないなら、そもそも横書きのままでいいじゃない。ルールなどで縦書きと決まっている場合はルールで決まっていない部分は気にしなくても良さそう。
+
+> 長いURLは書くより可能ならリンクに。
 
 > 鈴木さん：縦書きと縦組の区別：頭九十度回転。：これ、意味があとでわからなかった。要確認。
 
@@ -176,12 +201,3 @@
 1. 両方に適した書き方にする
 2. 両方に最適化
 3. 片方用に書いたものを両方にそのまま適用
-
-## 2.6 データの整合性
-> アクセシビリティ・検索への対応。コピー&ペーストの問題。 
-改行は段落を示す。一定文字ごとに強制的な改行を入れない。
-> HTMLなど、改行で区切られたテキストをひとまとまりの段落にまとめる機能がある場合についての注意。
-
-## 2.7 必要とするシステムの能力
-> 言いたいこと：結合文字やサロゲートをサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
-
