--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -1,7 +1,7 @@
 # 第2章 日本語デジタルテキストの書き方
 > この章で、日本語デジタルテキストの基礎、および組版・テキストレイアウトの観点での日本語デジタルテキストの作り方を述べる。対象は、jlreq-dの読者全て。特に対象読者のうち三番目、日本語テキストを書く人はこの章までで読み止めても大丈夫なようにする。
 
-前章で述べたように、デジタルテキストにおいては、書き手が組版の大きな部分を担っているので、書き手が意図通りのデジタルテキストを作る方法を知っていることが重要だ。このために書き手が気をつけるべきことをこの章にまとめた。またこの章は同時に以降の章のための基礎となる。
+前章で述べたように、デジタルテキストにおいては、書き手が組版の大きな部分を担っているので、書き手が意図通りのデジタルテキストを作る方法を知っていることが重要である。このために書き手が気をつけるべきことをこの章にまとめた。またこの章は同時に以降の章のための基礎となる。
 
 現代においては非日本語話者が日本語を取り扱う必要のあることも増えている。ゆえ、必要な日本語の基礎もカバーすることとする。
 
@@ -12,13 +12,9 @@
 > snsや書き込みなど vs 小説など。
 
 ## 2.1 デジタルデバイス上の日本語書き言葉の基礎
-> 以降の章のために役に立つ必要十分な量で。別の言葉で言うと、ノウハウ本程度の深さ。深入りしすぎない。
+> 2.1はデジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。日本語にネイティブでない人が対象だが、日本人でも発見があるかもしれない。以降の章に役に立つことを主眼に。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
 
-> 2.1はデジタルデバイス上の書き言葉にフォーカスした日本語の特徴の簡潔なサマリー。言葉は簡潔に。例を豊富に使ってイメージで理解させる。
- 
-> 日本語にネイティブでない人が対象だが、日本人でも発見があるかもしれない。以降の章に役に立つことを主眼に。
-
-現代の日本語は、表意文字である漢字と、表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字は比較的複雑で四角く見え、ひらがなは比較的単純で曲線が多い。漢字部分は内容語であり、ひらがな部分の多くは機能語として内容語を文法的につなげている。日本語には空白など語の区切りを示す文字はないが、漢字とひらがなの濃度、形や大きさの差がリズムを作り、これにより非明示的に語句のまとまり（the grouping of phrases）を示している（例）。
+現代の日本語は、表意文字である漢字と、表音文字であるひらがながその骨格をなしており、日本語の多くの部分は典型的に漢字の列とひらがなの列の繰り返しに見える。漢字部分は内容語であり、ひらがな部分の多くは機能語として内容語を文法的につなげている。漢字は比較的複雑で四角く見え、ひらがなは比較的単純で曲線が多い。日本語には空白など語の区切りを示す文字はないが、この漢字とひらがなの濃度、形や大きさの差がリズムを作り、これにより非明示的に語句のまとまり（the grouping of phrases）を示している（例）。
 
 ここに各々独自の役目を持つカタカナ、英字、数字、約物・記号が加わる（全てを含んだ例）。デジタルテキストにおいてはさらに絵文字、多様なスクリプトの文字、また、文字コードの歴史的経緯から存在する特殊な文字も用いられる。
 
@@ -28,135 +24,236 @@
 
 歴史的に日本語は文字を縦方向に並べて書いたが、西洋の数字や単語の影響で横書きもなされるようになった。デジタルデバイスにおいては横書きが主流である。
 
-日本語に限らないが、デジタルテキストを書く際には、目の前の見かけではなく、どのような文字コードが選ばれたかが重要である。（を一パラグラフ内でもう少し展開して）
-
 ## 2.2 日本語デジタルテキストに使用する文字
+> それぞれの文字に関する基礎知識。非日本語話者にとって以降の議論を理解するベースとなると共に、日本語話者にとっても興味深い基礎となることを期待する。ただし教科書でも学術書でもないのでさらっと簡潔に。
+
 ### ひらがなとカタカナ
-ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本語独自の表音文字である。ちょうどラテン文字の大文字小文字のように、ひらがなとカタカナは一対一に対応しており、各々約80文字ある（濁音半濁音小書を含め）。（ここで濁音半濁音小書き、50音表を説明。50音表ではなぜ濁音半濁音小書きが省略されている？）。両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための発音を示すルビ（後述）や付記のために漢字の形の一部を利用して生まれた。
+ひらがなとカタカナは仮名と総称され、日本語の発音を表す日本語独自の表音文字である。ひらがなとカタカナは一対一に対応しており、同じ音にひらがなとカタカナが一つづつある。現代日本語では、基本となる46文字、これに発音を変えるダイアクリティカルマークである濁点と半濁点、同じく発音を変える小書と呼ばれる基本の文字を小さくした文字が組み合わさる。ひらがな、カタカナの両方とも中国から来た漢字を日本語として消化する過程で漢字を簡略化する形で生まれたが、ひらがなとカタカナでは生まれた過程と用途が異なる。ひらがなは日本語を素早く書き表すための筆記体から生まれ、カタカナは中国語を日本語として読むための付記のために漢字の形の一部を利用して生まれた。
 
-現代日本語においてひらがなは機能語として主に漢字で書かれる内容語を繋げ、または活用語の活用語尾となる。この役目のために、日本語はしばしば漢字とひらがなの繰り返しのリズムを作る。ひらがなは漢字に比べてcursiveかつ比較的単純であるため、形と濃度の差が語の区切りを見つけやすくしている。ひらがなはまた、内容語を示したり、読みの難しい漢字の読みを示すのに用いられる。
+先に触れたように現代日本語においてひらがなは機能語として主に漢字で書かれる内容語を繋げ、または活用語の活用語尾となる。この役目のために、日本語はしばしば漢字とひらがなの繰り返しのリズムを作る。ひらがなはまた、内容語を示したり、読みの難しい漢字の読みを示すのに用いられる。
 
-カタカナは、外国語の単語をtranscribeし、音を直接表し、またオノマトペ（Onomatopoeia）に使われる。どれも音の表現である。
+カタカナは、音の表現に使われる。すなわち外国語の単語を音で表し（transcribe）、またオノマトペ（Onomatopoeia）に使われる。
 
 読みにくくはあるが日本語を全てひらがな、もしくは全てカタカナ、で表すことができる。言語を学び始めたばかりの子どもの教科書はすべてひらがなである。子供達はまずひらがな、カタカナ、そして簡単な漢字の順に文字を学び始める。
 
 #### side note: 変体仮名
-変体仮名についても一言。仮名は漢字の続け字の形から生まれて音だけが残ったものなので、一つの発音に対応する仮名文字が複数あった。明治になって一つの発音に一つの文字に統一されたが（これ知らない人多い）、統一以前の仮名は現代でも使用例がある。京都の街を歩くと店舗の名前などで出会うことができるだろう。近年Unicodeにも加わったので、デジタルデバイス上で使用することができる。
+仮名は漢字の続け字の形から生まれて音だけが残ったものであり、一つの発音に対応する仮名文字が複数あった。明治33年（1900）に一つの発音に一つの文字に統一されたが（これ知らない人多い）、統一以前の仮名は現代でも使用例がある。古都京都の街を歩くと店舗の名前などで出会うことができるだろう。xxxx年にUnicodeにも加わった。
 
 #### side note: 非標準的な濁音半濁音つき仮名
-伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）合成半濁音（U+309A）を置く。しかし多くのフォントにはこれらに対応する専用グリフがなく、その表現はシステムやアプリケーションに依存する。
+ベースの仮名に濁音を組み合わせた文字は20文字あるが、これらの伝統的な組み合わせ以外に、近年、本来は濁音のつかない仮名に濁音をつける用例が見られるようになっている「あ゙」。特に漫画などで例がみられる。これら非標準的な濁音つき仮名は、Unicode符号で表すことができる。目的の平仮名の後に合成濁音（U+3099）合成半濁音（U+309A）を置く。
 
 ###  漢字
-漢字は中国で生まれた表意文字。それぞれの文字が一つもしくは複数の概念を表し、非常のに多くの文字がある。漢字一つ一つが、英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると多くの数があることを理解しやすいだろう。日本語において漢字は内容語conent wordsを作る。
+漢字は中国で生まれた表意文字であり、それぞれの文字が一つもしくは複数の概念を表す。非常に多くの文字が存在し、漢字一つ一つが英単語やその語根、歴史上存在したスペリングなどに対応するものと考えると、その多さを理解しやすいだろう。日本語において漢字は主に内容語（content words）を作る。
 
-また、既に述べたように多くの漢字や複合語には複数の読みがあり、これが日本語に表記と読みとの二重構造を作っている。
+また、既に述べたように多くの漢字や複合語には複数の読みがあり、これが日本語における表記と読みの二重構造を作っている。
 
-### 英字
-英字は、もともとは西欧語由来の単語を表すために使われていたが、現代では固有名詞を中心に外国由来でなくても使用される場合があり、現代日本語の一部として定着している。英字は記号的な用途のほか、URLやメールアドレス、技術的内容の表現にも使われる。
+### 和字
+ひらがな、カタカナ、漢字は伝統的に日本語に使われてきた文字であり、これらをまとめて「和字」と呼ぶ。デジタルデバイス上の多くのフォントでは和字は全角幅と呼ばれる固定の幅を持つ。全角幅については後に詳しく説明する。全角幅を持つ文字を全角文字と呼ぶ。
 
 ### アラビア数字
-歴史的には数字を漢字で示していたが、現代では数量を表す際にアラビア数字の使用が増えている。一方、熟語の中に数字が現れる場合は漢字を使う（間違えやすい例を一つ。また英語の例も一つ：two sides vs 2 sides、a thousand and one nights vs  1001 nights（千一夜物語）、The seven Seas など）
+歴史的には数字を漢字で示していたが、現代では数量を表す際にアラビア数字の使用が増えている。一方、熟語や慣用句の中に数字が現れる場合は漢字を使う（間違えやすい例を一つ。また英語の例も一つ：two sides vs 2 sides、a thousand and one nights vs  1001 nights（千一夜物語）、The seven Seas など）
 
-### 約物
-約物には英文が起源のものが多く、見かけが似ているものが多い。ただし、デザインが似ているものでも、和文文字に合わせたデザインになっているので混用は望ましくない。約物の使い方は、別セクションに。
+### 英字
+英字は、西欧語由来の単語や技術的な内容を表すために使用される。また、ブランド名、製品名や企業名などを中心に、外国由来でなくても英字を使用した単語が使われることがあり、略語や記号としても広く利用されている。これらに見られるように、英字は現代日本語の一部として定着している。
 
-### デジタルデバイス上の日本語に独特な文字
-#### 全角数字や英字
+数字と英字をまとめて英数字と呼ぶ。英数字は一般的に一文字一文字独自の幅を持つ。
 
-この二重符号化が歴史的な理由から存在する。活字では全角でない文字が含まれると行の調節が面倒だったので、全角の英数字が便利だった。またコンピューター上では全角英字は縦書きにした時に自動的に正立するので、英字が記号的に使われる時、日本語の単語の一部として使われる場合（e.g. Tシャツ）などに便利に使われる。web などスタイル付きテキストでは明示的に正立させることができるので本来の英字を使って必要な場合には正立させるのがより正しい方法である（理由！このように書いたら必ず理由を書く）。本来の英字と混ぜて使うとデザインが不統一になることがあるので、使用に注意が必要である（理由その1）。
+### 和文と欧文の約物
+約物（やくもの）とは、記号\*の一種で、文章に使われ、文章の意味や構造を明確にするために使われる文字の総称である。
 
-以降の章で英数字という言葉は、プロポーショナルなラテンスクリプトの文字を示し、ここで述べた全角英数字は、明示的に全角英数字と言う。
-日本語フォントに中途半端に含まれるギリシャ文字や数学記号などについて言及。
+\* 記号とは言語の基本単位としての文字（Letter）ではない文字で、特定の意味や機能を持ち、情報を補完したり、特定の操作や概念を表現する。記号には約物以外に、数学記号や通貨記号、矢印、絵文字をはじめとするピクトグラムなどがある。
+> 英語ではLetter vs Characterの区別があるが、日本語でどのように言い分けるのが良いだろう？
 
-#### 半角カタカナ
-初期のコンピューターではターミナル画面上の1:2の縦長の固定した箱にアルファベットを表示するようになっていた。そのような初期のデバイス上に日本語を表示するために作られた文字でカタカナのみが存在する。
+和字とともに使われるようにデザインされている和文約物と、ラテン文字とともに使われるようにデザインされている欧文約物がある。代表的な和文約物に以下のものがある。
 
-もはや必要なく、互換性のために存在する。他の和文文字とデザインが合わず、プロフェッショナルな結果にならない。古いユーザーインターフェースや文章で見かけることがある。また顔文字など特殊な表現で見られる。これらの文字が入力できないデバイスも多い。
+- 句読点：
+  - 読点（、）
+  - 句点（。）
 
-#### 絵文字
+- 括弧類：
+  - 丸括弧（（ ））
+  - 角括弧（［ ］）
+  - 鉤括弧（「 」）
+  - 二重鉤括弧（『 』）
+
+- 引用符：
+  - シングルクオーテーション（‘ ’）
+  - ダブルクオーテーション（“ ”）
+
+- その他の記号：
+  - 感嘆符（！）
+  - 疑問符（？）
+  - 中黒（・）
+  - 長音符（ー）
+  - ダッシュ（―, ー）
+  - アスタリスク（＊）
+
+> CJK Symbols and Punctuation にある全角約物は：
+> 、。〃〄々〆〇〈〉《》「」『』【	】〒〓〔〕〖〗〘〙〚〛〜
+> 〝(REVERSED DOUBLE PRIME QUOTATION MARK)
+> 〞(DOUBLE PRIME QUOTATION MARK)
+> 〟(LOW DOUBLE PRIME QUOTATION MARK)
+
+> 全角互換エリアにある約物も和文約物として扱う：
+> ！＃＄％＆（）＊＋，－．／：；＜＝＞？［＼］＾＿｛｜｝～｟｠
+> ＂(FULLWIDTH QUOTATION MARK)
+> ＇(FULLWIDTH APOSTROPHE)
+> ｀(FULLWIDTH GRAVE ACCENT)
+
+和文約物には欧文約物が起源のものが多く、見かけが似ているものが多い。ただし、同じように見えるものでも、和文文字に合わせたデザインになっているので混用は望ましくない。
+
+約物の使い方は次節で説明する。
+
+### 絵文字
 日本の携帯電話で発明されたピクトグラムであり、多くは色を使っている。Unicode化され、世界中に広まった。
 
-## 2.3 英字・数字・約物の使い方（ドラフト未完成）
+### 特殊な文字
+#### 全角英数字
+歴史的な理由（金属活字の作業性）から、英数字には本来の文字に加えて、全角英字や全角数字と呼ばれる固定全角幅を持つ文字が存在する。（Unicodeの文字コード範囲を示すか？）
 
-日本語に限らないが、デジタルテキストを書く際には、目の前の見かけではなく、どのような文字コードが選ばれたかが重要である。（移動。書き方のどこかに。一パラグラフ内でもう少し展開して）
+全角英数字を本来の文字と混ぜて使うとデザインが不統一になるので利用には注意が必要である。詳しくは次節で述べる。
 
-> 書くことの意味が、紙とデジタルで変わっていること、は正確に文字を選ばなけければならないことを意味し、より広く、デジタルではユーザーが正しくテキストを作る必要のあることにつながる
-> 目の前の見かけではなく、正確に文字コードを選ぶ必要がある。適切な入力支援が必要。
+なお、全角英数字と対比して、通常の英数字を表す言葉として、全角の半分の幅を意味する「半角文字」「半角英字」「半角数字」という言葉が使われることがある。初期のコンピューターでは英数字はいわゆる半角幅を持っていたが、現代のデジタルデバイスにおいて英数字は一般的に文字ごとに幅を持っているので、これはもはや技術的に間違った用語である。
+ 
+#### 半角カタカナ
+初期のコンピューターではターミナル画面上に一般的に縦横2:1の固定の大きさにアルファベットを表示するようになっていた。これら初期のデバイス上で日本語を表示するために作られた文字が半角カタカナであり、現在では歴史的な互換性のために存在している。
 
-### 英字（欧文、全角、和欧間空白）
-### 数字（欧文、全角）
-- ラテン文字の単語の前後にスペースを追加すべきかどうかなど（一般的に述べる）
+可読性に劣り、また他の文字との視覚的一貫性にも問題があるため、半角カタカナの使用は避けるべきである。これらの文字の入力の難しいデバイスも多い。
+
+## 2.3 文字の使い方
+> ここでは、組版が正しく行われるための、文字の使い方を述べる。ここでは文字の使い方、選び方を説明し、レイアウトの詳細には立ち入らない。
+> 書くことの意味が、紙とデジタルで変わっている。デジタルでは目の前の見かけではなく、正確に文字コードを選ぶ必要がある。ゆえに正しい文字の選び方、使い方が重要。適切な入力支援が必要。
+
+> todo: JLReq をスキャンして、文字の使い方に関連することを拾い出す。Unicode confusable を利用して見た目で紛らわしく、誤用しやすい文字を探すか？  
+> 
+### 全角英数字
+全角英数字には以下のような欠点があるので使用には注意が必要である。
+
+- 本来の文字と混ぜて使うと視覚的一貫性を損なう。同じ文字でも、幅の異なるものが混在することになり、さらに国際化環境など英数字に和字とは異なるフォントが用いられる場合には文字デザインの一貫性も損なわれる。
+- 英字略語のように一文字一文字読む場合を除き、英単語や英文などに用いると可読性に劣る。
+- 幅が通常の文字に比べて長いため、文字列が長くなる。
+- アクセントの付いたものは存在せず、よってフランス語などアクセント付き文字の必要な単語を表す時には使えない。
+- 全角英数字はURLの構造的部分に使うべきではない。URLの構造的部分は通常の英数字を用いることが規定されており、全角英数字を使うと動作しないなどエラーの原因になる。URL以外でも、HTML/CSSやmarkdownなどの機能的な部分に使用することはできない。
+
+全角英数字には下のような利点がある
+
+- 縦書きで自動的に縦向きになるので、縦書きでの英字の記号的利用に便利である。
+
+結果的に、下のような場合に限定して用いるのが安全である。
+
+- 縦書きであり、英数字の使用が大文字の英字略語や2桁以内の数字に限られる場合。全角英数字を使用する場合には、通常の英数字は用いず、一貫して全角英数字を用いる。
+
+### 半角カタカナ
+先に述べたように、可読性に劣り、また他の文字との視覚的一貫性にも問題があるため、テキストでの半角カタカナの使用は避けるべきである。
+
+### 英字・数字
+> 文字の使い方、選び方で言うことはあるか？
+
 ### 約物
-  - 括弧
-	- 例えば全角括弧とプロポーショナル括弧の使い方。どちらのコンテキストか。
-	- 囲む範囲の違い。英文の括弧は英字をディセンダを含めて囲むように、和文の括弧は全角和文を囲むように作られていて、ベースラインの調整とは関係なく、上下範囲が異なる
-  - ダッシュ類
-- 疑問符感嘆符
-	- の後は一文字空ける。開けない場所も説明
-- カバーしたいこと
-	- JLReq をスキャンして、文字の使い方に関連することを拾い出す
-	- 見た目で紛らわしく、誤用しやすい文字を洗い出す（[Unicodeのconfusable](#)(https://util.unicode.org/UnicodeJsps/confusables.jsp?a=&r=None)?）
-	- 約物に関して入力プログラムに望まれる機能について触れる
-	- 同音異義語の選択誤りを避ける：e.g. 意外 vs 以外。また紛らわしい漢字について触れるか？祟る崇拝、柿柿
-	- 全角半角について一般的に述べることはある？ どちらも同じ意味の文字の場合は、UnicodeのNormalizationで同じ意味の文字は同じに扱う。フォームの問題
-	- Unicodeに不足している文字（全角ダブルクオートなど）
 
-### 2章に含めたいが位置の決まっていないもの
+#### 括弧やクオート類
+> 全角括弧とラテン文字用括弧の使い方の注意。ラテン文字用括弧はそう定義されているわけではないが、ほとんどの場合ラテン文字用に作られている。和文括弧とラテン文字用括弧では囲む範囲が異なることを図解。英文の括弧は英字をディセンダを含めて囲むように、和文の括弧は全角和文を囲むように作られていて、上下範囲が異なる。
 
-#### テキストの構造、書き方、例えば
-> 段落は明示的な改行の入らない一続きのテキスト。先頭に空白を入れるべきではない。が、実際には、全角の単位でインデントできるアプリケーションは2024年現時点では少ない。その場合全角空白を挿入する。
-> HTMLなど、改行で区切られたテキストをひとまとまりの段落にまとめる機能がある場合、その機能は和字の周辺に空白を入れるべきでない。が、そのようにしていないアプリケーションが多いので注意。その場合は空白が入るべき箇所で切るか、複数行に分けない。
-> 見出しについて何か言う事はあるか？　もし対象がHTMLやmarkdownならスタイルではなく、マークアップで示せよ、とは言えるが……
+> 和文で使うクォーテーションマークが2024年時点で独立した文字として存在しない。CSSや高度な処理の可能なアプリケーションではフォント中の全角クォーテーションマークを使うことができる。
 
-#### 必要とするシステムの能力
-> 言いたいこと：結合文字（テスト：使いやすいテストケースはある？）やサロゲート（テスト：絵文字、もしくはサロゲートの必要な特定の漢字を示して、それが正常に表示でき、編集できる）をサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
+#### ダッシュ類
+> EM DASHおよび三点リーダは二つ続ける。長音と間違えない。入力支援が重要。
 
-----
-# 第3章 文章のフォーマッティング
-> あとで別ファイルに移動する
+#### 疑問符と感嘆符
+> 疑問符と感嘆符の後は一文字空ける。開け過ぎに感じる場合も多いが……
+> 開けない場所も説明
 
-## 2.4 日本語書体とフォントの選び方
+### 入力プログラムによる支援
+> 正しい約物の選択を支援すること。特に、和文約物と欧文約物の区別、似た形の約物の区別。
+
+
+> 2.3 文字の使い方は、言うことがあんまりないかもしれない。上の節の文字の種類か、もしくは基礎フォーマットに統合するか？
+
+---- 
+
+# 第3章 基礎的なフォーマッティング
+
+## 3.1 段落のスタイル
+段落は意味の単位である。段落（パラグラフ）にはいくつかのスタイルがある。代表的なものを示す。なお、下に示した段落スタイルの名前は特に定まったものがなく、この文書での名前である。
+
+ウェブにはテキストとスタイルを分離するという原則がある。段落においては、テキストを特定の段落スタイル専用に変更することなしに、異なる段落スタイルを適用できるのが理想的である。
+
+千鳥書きなど、文の構造に従って固定的な行送りを行うような特殊な場合を除いて、段落は改行を含まないひと続きのテキストであり、そうすべきである。そのことによって、環境に応じた行の折り返しが可能になる。
+
+
+#### ブロック段落
+各段落の最初の行をインデントせず、段落間に空白行を入れる。ウェブやメール含め、デジタルテキストはこの形式がデフォルトになっていることが多い。ブロック段落では段落の境界を視覚的に捉えやすい。空白行のために文が上下に長くなる。これは紙に印刷する場合にページ数とコストに影響するため重要となるが、デジタルテキストにおいては問題とはならない。
+
+> 日本語、英語、それぞれの印刷でブロック段落を使っているものにはどんなものがあるか？
+
+#### 字下げ段落
+各段落の最初の行をインデントし、段落間に空白行を入れない。活版印刷が普及し始めた明治時代以降の書籍はこの形式であり、フォーマルな印象を与える。段落境界はブロック段落に比べると視覚的に見えにくくなる。
+
+日本語ではインデント量は全角一文字分であり、また英語と異なり、章や節の最初の段落であってもインデントを行う（サイドノートに、英語での字下げはもっと大きく、また中国語では二全角分、などの説明をするか？）。
+
+アプリケーションは段落に用いられている文字の全角空白の幅を単位としたインデント量を設定できる必要がある。代わりの方法として、段落の先頭に全角空白文字を挿入する方法があるが、こうするとテキストデータが字下げ段落専用になってしまい、後に他の段落スタイルを適用するためにテキストの改変が必要になる。
+
+#### ぶら下がりインデント
+字下げ段落と反対に、段落の最初の行はインデントせず、2行目以降をインデントする。リストや引用文で使用される。段落の始まりを特に強調できるので、リストに用いることで情報の整理に役立つ。
+
+この方法は文の折り返した部分がインデントするため、アプリケーションに一行目と二行目以降のインデント量を変更する機能のある場合にのみ可能となる。
+
+#### 中央揃え
+段落全体が中央揃えになる。この方法はタイトルや見出し、詩など、特定のコンテンツで強調効果がある。
+
+#### 千鳥書き
+ニュース原稿、詩、和歌など。文の語句のまとまりに従って手動で折り返しを行う。文の構造を素早く捉えることができる。固定のフォーマットとなるので、画面の大きさ、特に幅の変化への追従が限定的となる。
+
+千鳥書きは、前の行の行末から次の行の行頭への視線の移動が容易で、アクセシビリティに優れていることが知られている（論文）。（文を文節で折り返すなどの規則を用いてアプリケーションでの対応が望まれる）
+
+## 3.2 横書きと縦書き
+> 縦書きのあること。伝統的なテキストの方向であること。数字や欧米の単語の影響で、横書きが増えたこと。縦書きの問題点を説明（算用数字や英単語などが読みにくくなる）。
+
+> 伝統的な縦書きのスタイルの横書きとの違いを説明。両方の方向に対応したテキストデータを作成するための問題点。横書きを縦書きにする時の問題点、解決方法。
+
+対処方法：
+1. 両方に適した書き方にする
+2. 両方に最適化
+3. 片方用に書いたものを両方にそのまま適用
+
+
+## 3.3 日本語書体とフォント
 ここで書体とは文字デザインのカテゴリを指し、フォントとは名前のついた具体的な実装を指す。
 
 ### 日本語フォントの成り立ち
 先に述べたように日本語は複数の起源を持った文字を使用するので、一つの日本語フォントにはそれら複数の種類の文字が入っている。
 
-多くのフォントでは、漢字と仮名（和字、と言う用語を導入するか？）は統一した大きさの四角形の中にデザインされている。この場合の大きさとは、文字の黒い部分の大きさではなく、文字を並べた時にできる空間も含めた大きさである。
+多くの日本語フォントで和字は等幅であり、統一した大きさの四辺形の中にデザインされている。この四辺形の、文字を並べる方向の幅、つまり横書きなら横幅、縦書きなら縦幅、を「全角」または「全角幅」と呼び、日本語をレイアウトする際の重要な単位となっている。多くの日本語フォントでこの四辺形は正方形であり、縦書き、横書き両方に使いやすい。四辺形が縦長の場合には縦書き、横長なら横書きに、一般的には適していると言われるが、さまざまな効果のためそうでない方向に使われることもある。
 
-この四辺形の、文字を並べる方向の幅、つまり横書きなら横幅、縦書きなら縦幅、を「全角」または「全角幅」と呼び、日本語をレイアウトする際の重要な単位となっている。
-
-> 正方形なら縦書き、横書き両方に使いやすいこと。縦長なら縦書き、横長なら横書きに一般的には適していること。
+和字のうち、仮名、漢字はそれぞれ等幅だが、仮名、漢字で幅が異なるもの、また仮名のみプロポーショナルのフォントもある。
 
 （和字が統一した幅になっていない日本語フォントもあるので、この文書ではU+3000 Ideographic Space、全角空白の幅を全角と定義する。（これは専門的すぎ。3章以降に））
-
-> 漢字文字数について。
 
 現代日本語は仮名の占める割合が多いので、仮名のデザインを変えることで効果的にテキストの見かけを変えることができる。漢字部分は同じデザインで、仮名のデザインのみ異なるフォントがある。（side note にmac/windowsでの例）
 
 日本語フォントは英字も持っており、それらの英字は和字と使われることを念頭にデザインされている。
 
-### 文字セット
-> 書体によってサポートする文字範囲が異なる。基本はX0213をカバーするもの。X0208は特に地名人名に不足で本文には向かない。タイトルやデザインなど限定用途。漢字の制限について（常用漢字、教育漢字）。教育漢字も常用漢字もそこに限定するという意図はないこと。制限する問題点を述べる（熟語の片方を開いてしまう。人名地名））
-> 文字を十分含んだフォントを選ぶこと。
-> フォールバックに注意！
+国際化環境では、テキストに単独のフォントではなくフォントのリストを適用することによって、単独のフォントが表示できる文字範囲の制限を取り除いていることが多い。また、アプリケーションによっては英字と和字に対して別々のフォントを指定できるようになっているものもある。このような場合、英字は和文フォントとは別個のラテン語用フォントから表示されることも多い。
 
-> AdobeJapan1 に触れるか触れないか。
+### 日本語フォントの文字セット
+フォントによってサポートする文字範囲、特に漢字の範囲が異なる。
 
-> 豊島先生、「JIS批判の基礎知識」https://joao-roiz.jp/mtoyo/on-JCS/mt-gene.pdf を読む。それから考える。
+一般的にはJIS X 0213をカバーするものを選ぶのが安全である（サイドノート：一般的に、日本語フォントで2万字以上のグリフ数を持つものはJIS X 0213をカバーしている。AdobeJapan1に準拠したものなら、AdobeJapan1-5以上）。より小さい文字セットの場合、特に固有名詞や稀な漢字を欠く。
 
+平易な文章やタイトル、デザインなど、平易な文字に限定される場合にはより小さい文字セットで十分な場合が多い。多くのデザイン書体は小さめの文字セットを持っている。
 
-### 日本語書体の種類と説明（明朝、ゴシックにフォーカス。他は一言紹介程度）
-ゴシック、丸ゴシック、明朝の書体は様々なコンテントに汎用に使える。特別な効果を狙っているので無い限りこれらの書体を使用するべきであろう。フォントに多くの選択肢があり、文字数（後述）の揃っているものが多い。
+ウェブなどの環境において文字数の小さい日本語フォントを使用した場合、このフォントにカバーされてない漢字が先に述べたフォントリストによって、他の言語、例えば中国語のフォントから表示されることがある。そうすると字形やデザインが異なる字が混ざることになりプロフェッショナルな結果にならないので注意が必要である。
 
-英字と組み合わせやすいのもこれらの書体である。ゴシックはSans-serif、丸ゴシックRound Sans-serif、明朝はSerif書体に対応する。
+> 豊島先生、「JIS批判の基礎知識」https://joao-roiz.jp/mtoyo/on-JCS/mt-gene.pdf を読む
 
-別個の英字フォントと合わせる場合でも、これらの書体は合わせやすい。よって国際化にはこれらの日本語書体を使うべきであろう。
+### 日本語書体
+ゴシック、丸ゴシック、明朝の書体は様々なコンテントに汎用に使える。特別な効果を狙っているので無い限りこれらの書体を使用するべきであろう。フォントに多くの選択肢があり、文字数の揃っているものが多い。
+
+英字と組み合わせやすいのもこれらの書体である。国際化にはこれらの書体を使うべきであろう。ゴシックはSans-serif、丸ゴシックRound Sans-serif、明朝はSerif書体に対応する。
 
 ペンや鉛筆で書いたような書体は、カジュアルなもしくは懐かしい雰囲気を持ち、横書きへの適応性があり、比較的応用範囲が広い。
 
-筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。公的な、権威的な、または古風な雰囲気を持つ。
-
-日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であるから、基本的にはそれぞれのコンテキストを外れて使わない。
+筆書きの雰囲気の残っているもの、中国伝統書体：楷書、行書、草書、篆書などは主に縦書きで。公的な、権威的な、または古風な雰囲気を持つ。日本の江戸文字は歌舞伎や相撲、落語の興行など特定のコンテキストで使われる文字であるから、基本的にはそれぞれのコンテキストを外れて使わない。
 
 特殊な用途の書体に、アンチック、学参、字幕用がある。
 
@@ -186,18 +283,37 @@
 
 
 
-## 3.2 段落
-> 主な段落スタイルの説明。データは中立であるべき等原則を説明。しかし現時点では現実にはそうはゆかないので、どうするかを説明（このような箇所は状況によってアップデートが必要）。
+## 𝑥.𝑥 Unicodeの見地からの日本語文字セット（jlreq-dのどこかに入れる？）
+> 昨今、JIS文字セットよりもUnicode文字セットの方が日本語に関して先を行っている。絵文字や変体仮名はその一つ。また、濁音付きの任意の仮名が表現できるのもUnicodeならでは。
+> Unicodeを出発点とした日本語文字セットまたはグリフセットを考えるべきではないだろうか。
 
-## 3.3 組み方向
-> 組み方向の説明。書き方の違い。それが重要な場合とそうでない場合。データはスタイル中立であるべきという原則。主流でより制約の少ない横書きをベースとして、縦書きにする場合の説明。
-> 無視して良い場合、と述べたが、考えてみると、わざわざ、縦書きにするような用途は、大体気にする？　気にしないなら、そもそも横書きのままでいいじゃない。ルールなどで縦書きと決まっている場合はルールで決まっていない部分は気にしなくても良さそう。
+> Unicodeに欠けている文字：
 
-> 長いURLは書くより可能ならリンクに。
+> JLReq TFによる以前の調査で「要和文文字」とされたのは以下：
+> U+2010 HYPHEN
+> U+2013 EN DASH
+> U+2014 EM DASH
+> U+2025 TWO DOT LEADER
+> U+2026 HORIZONTAL ELLIPSIS
+> U+2018 LEFT SINGLE QUOTATION MARK
+> U+2019 RIGHT SINGLE QUOTATION MARK
+> U+201C LEFT DOUBLE QUOTATION MARK
+> U+201D RIGHT DOUBLE QUOTATION MARK
 
-> 鈴木さん：縦書きと縦組の区別：頭九十度回転。：これ、意味があとでわからなかった。要確認。
+> また、JLReqに現れる、二倍ダッシュ、二倍三点リーダ、二倍二点リーダ、は文字コード、もしくはグリフが欲しい。強力な分割禁止。欧文には以下の文字がUnicodeにある。
+> U+2E3A TWO-EM DASH
+> U+2E3B THREE-EM DASH
+> 1/3, 1/4, 1/6 EM SPACE
+> （他にもEM何ちゃらがあるかもしれない。要チェック）
 
-対処方法：
-1. 両方に適した書き方にする
-2. 両方に最適化
-3. 片方用に書いたものを両方にそのまま適用
+---- 
+## どこかに書く
+### テキストの構造、書き方（第3章）
+> スタイルに触れずにプレーンテキストのレベルで文書の構造を述べると、却って内容が抽象的で高度になる。ので、第3章に移動。
+
+> 段落は明示的な改行の入らない一続きのテキスト。先頭に空白を入れるべきではない。が、実際には、全角の単位でインデントできるアプリケーションは2024年現時点では少ない。その場合全角空白を挿入する。
+> HTMLなど、改行で区切られたテキストをひとまとまりの段落にまとめる機能がある場合、その機能は和字の周辺に空白を入れるべきでない。が、そのようにしていないアプリケーションが多いので注意。その場合は空白が入るべき箇所で切るか、複数行に分けない。
+> 見出しについて何か言う事はあるか？　もし対象がHTMLやmarkdownならスタイルではなく、マークアップで示せよ、とは言えるが……
+
+### 必要とするシステムの能力（第3章で触れることがあるなら第3章）
+> 言いたいこと：結合文字（テスト：使いやすいテストケースはある？）やサロゲート（テスト：絵文字、もしくはサロゲートの必要な特定の漢字を示して、それが正常に表示でき、編集できる）をサポートしているシステムを選ぶこと！（非Unicodeシステムについては範囲外なので述べない）
