Update 2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md

--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -124,6 +124,10 @@
 > ここでは、組版が正しく行われるための、文字の使い方を述べる。ここでは文字の使い方、選び方を説明し、レイアウトの詳細には立ち入らない。
 > 書くことの意味が、紙とデジタルで変わっている。デジタルでは目の前の見かけではなく、正確に文字コードを選ぶ必要がある。ゆえに正しい文字の選び方、使い方が重要。適切な入力支援が必要。
 
+> この2.3節の各項目は敏先生にドラフトをお願いできると嬉しいです。
+
+> この節で言うことがあまりない場合、2.2節の文字の種類か、もしくは基礎フォーマットに統合する？
+
 > todo: JLReq をスキャンして、文字の使い方に関連することを拾い出す。Unicode confusable を利用して見た目で紛らわしく、誤用しやすい文字を探すか？  
 > 
 ### 全角英数字
@@ -164,10 +168,7 @@
 > 開けない場所も説明
 
 ### 入力プログラムによる支援
-> 正しい約物の選択を支援すること。特に、和文約物と欧文約物の区別、似た形の約物の区別。
-
-
-> 2.3 文字の使い方は、言うことがあんまりないかもしれない。上の節の文字の種類か、もしくは基礎フォーマットに統合するか？
+> 正しい約物の選択を支援すること。特に、和文約物と欧文約物の区別、似た形の約物の区別。一番支援が欲しいのが約物なのでここに置いてあるが、場所は他でも。
 
 ---- 
 
@@ -206,7 +207,11 @@
 
 千鳥書きは、前の行の行末から次の行の行頭への視線の移動が容易で、アクセシビリティに優れていることが知られている（論文）。（文を文節で折り返すなどの規則を用いてアプリケーションでの対応が望まれる）
 
-## 3.2 横書きと縦書き
+## 3.2 行揃えのスタイル
+### 両端揃え
+### 行頭揃え
+
+## 3.3 横書きと縦書き
 > 縦書きのあること。伝統的なテキストの方向であること。数字や欧米の単語の影響で、横書きが増えたこと。縦書きの問題点を説明（算用数字や英単語などが読みにくくなる）。
 
 > 伝統的な縦書きのスタイルの横書きとの違いを説明。両方の方向に対応したテキストデータを作成するための問題点。横書きを縦書きにする時の問題点、解決方法。
@@ -217,7 +222,7 @@
 3. 片方用に書いたものを両方にそのまま適用
 
 
-## 3.3 日本語書体とフォント
+## 3.4 日本語書体とフォント
 ここで書体とは文字デザインのカテゴリを指し、フォントとは名前のついた具体的な実装を指す。
 
 ### 日本語フォントの成り立ち
@@ -281,8 +286,8 @@
 
 ウェイト：
 
-
-
+---- 
+## どこかに書く
 ## 𝑥.𝑥 Unicodeの見地からの日本語文字セット（jlreq-dのどこかに入れる？）
 > 昨今、JIS文字セットよりもUnicode文字セットの方が日本語に関して先を行っている。絵文字や変体仮名はその一つ。また、濁音付きの任意の仮名が表現できるのもUnicodeならでは。
 > Unicodeを出発点とした日本語文字セットまたはグリフセットを考えるべきではないだろうか。
@@ -307,8 +312,7 @@
 > （他にもEM何ちゃらがあるかもしれない。要チェック）
 
 ---- 
-## どこかに書く
-### テキストの構造、書き方（第3章）
+### テキストの構造
 > スタイルに触れずにプレーンテキストのレベルで文書の構造を述べると、却って内容が抽象的で高度になる。ので、第3章に移動。
 
 > 段落は明示的な改行の入らない一続きのテキスト。先頭に空白を入れるべきではない。が、実際には、全角の単位でインデントできるアプリケーションは2024年現時点では少ない。その場合全角空白を挿入する。
