--- a/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
+++ b/drafts/2. 日本語デジタルテキストの作り方（Creating Japanese Digital Text）.md
@@ -179,8 +179,9 @@
 
 ウェブにはテキストとスタイルを分離するという原則がある。段落においては、テキストを特定の段落スタイル専用に変更することなしに、異なる段落スタイルを適用できるのが理想的である。
 
-千鳥書きなど、文の構造に従って固定的な行送りを行うような特殊な場合を除いて、段落は改行を含まないひと続きのテキストであり、そうすべきである。そのことによって、環境に応じた行の折り返しが可能になる。
+千鳥書きなど、文の構造に従って固定的な行送りを行うような特殊な場合を除いて、段落は改行を含まないひと続きのテキストであり、そのようにデータを作成すべきである。そのことによって、環境に応じた行の折り返しが可能になる。
 
+> 段落、と言うより段落のインデントの方式について述べている？
 
 #### ブロック段落
 各段落の最初の行をインデントせず、段落間に空白行を入れる。ウェブやメール含め、デジタルテキストはこの形式がデフォルトになっていることが多い。ブロック段落では段落の境界を視覚的に捉えやすい。空白行のために文が上下に長くなる。これは紙に印刷する場合にページ数とコストに影響するため重要となるが、デジタルテキストにおいては問題とはならない。
@@ -195,21 +196,40 @@
 アプリケーションは段落に用いられている文字の全角空白の幅を単位としたインデント量を設定できる必要がある。代わりの方法として、段落の先頭に全角空白文字を挿入する方法があるが、こうするとテキストデータが字下げ段落専用になってしまい、後に他の段落スタイルを適用するためにテキストの改変が必要になる。
 
 #### ぶら下がりインデント
-字下げ段落と反対に、段落の最初の行はインデントせず、2行目以降をインデントする。リストや引用文で使用される。段落の始まりを特に強調できるので、リストに用いることで情報の整理に役立つ。
+字下げ段落と反対に、段落の最初の行はインデントせず、2行目以降をインデントする。リストや引用文で使用される。段落の始まりを特に強調できるので、リストに用いることで情報の整理に役立つ。通常、字下げ段落と同様に、段落間に空白行を入れない。
 
 この方法は文の折り返した部分がインデントするため、アプリケーションに一行目と二行目以降のインデント量を変更する機能のある場合にのみ可能となる。
+（これは行揃えの種類？）
+
+## 3.2 行揃えのスタイル
+> 厳密には段落のスタイルと分けにくいが、ここでは、強制改行のない一つ付きのテキストからなるテキストが、どのように折り畳まれるか、を行揃えとして扱う。
+> 
+#### 両端揃え
+- 字間が行の調整の影響を受ける
+- 行長を全角の整数倍にする必要がある
+- 各行の左右両端が揃っているため、全体に均一で整っている印象
+- 新聞、雑誌、書籍の本文など
+> 
+#### 行頭揃え
+- 右が不揃い
+- 字間が常に保たれる
+- ウェブページなど
+
+#### 行末揃え
+- 行頭が不揃い
+- 目次やキャプションなどで使われることがある
 
 #### 中央揃え
 段落全体が中央揃えになる。この方法はタイトルや見出し、詩など、特定のコンテンツで強調効果がある。
 
 #### 千鳥書き
-ニュース原稿、詩、和歌など。文の語句のまとまりに従って手動で折り返しを行う。文の構造を素早く捉えることができる。固定のフォーマットとなるので、画面の大きさ、特に幅の変化への追従が限定的となる。
+ニュース原稿、詩、和歌など。次の行の先頭が前の行からインデントされて、次々に行の先頭の位置がずれてゆく方式。日本語の場合、文節などの語句の句切れで行を折り返す。前の行の行末から次の行の行頭への視線の移動が容易で、アクセシビリティに優れていることが知られている（論文）。
 
-千鳥書きは、前の行の行末から次の行の行頭への視線の移動が容易で、アクセシビリティに優れていることが知られている（論文）。（文を文節で折り返すなどの規則を用いてアプリケーションでの対応が望まれる）
+#### 均等割付け
+- 両端揃えでは、段落末は成り行きで、行末に揃えないが、均等割付けは段落末を行末位置に揃える。
 
-## 3.2 行揃えのスタイル
-### 両端揃え
-### 行頭揃え
+#### 強制的な改良を伴う揃え
+通常、一つの段落は改行の入らない一続きのテキストであり、表示の柔軟性を確保するためにも強制的な改行は避けるべきである。しかし、文の語句のまとまりに従って強制的に改行する方法の利点もある。語句のまとまりが強調され、文の構造が捉えやすくなる。特に中央揃え、行末揃え、千鳥書きなどで効果的に利用される。固定のフォーマットとなるので、画面の大きさ、特に幅の変化への追従が限定的となる。よって異なる画面サイズに対して複数の改行方法を取る必要のある場合もある。
 
 ## 3.3 横書きと縦書き
 > 縦書きのあること。伝統的なテキストの方向であること。数字や欧米の単語の影響で、横書きが増えたこと。縦書きの問題点を説明（算用数字や英単語などが読みにくくなる）。
